examples/type_system/failing/188_runtime_either_boundary_e1004.flx
import TypeSystem.BoundaryUnknown

fn unwrap_or_zero(input: Either<String, Int>) -> Int {
    match input {
        Left(_msg) -> 0,
        Right(value) -> value,
        _ -> 0
    }
}

let dynamic = TypeSystem.BoundaryUnknown.dynamic_string()
unwrap_or_zero(dynamic)
